# devtodo

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/devtodo/: __init__.py  cli.py  core.py  storage.py
tests/: test_core.py
